# monocular_vo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  config.yaml  notes.md
app/: CMakeLists.txt  config_kitti.yaml  config_parking.yaml  mono_kitti.cc  mono_malaga.cc  mono_parking.cc  mono_tsukuba.cc
cmake_modules/: FindCHOLMOD.cmake
data/pose/: parking_pose.txt
implementation_detail/: config_file.md  frame.md  initialization.md  keyframe.md  local_mapping.md  main.md  map.md  map_point.md  matcher.md  optimizer.md  system.md  tracking.md
include/: front_end_tracking.h
include/mono_slam/: back_end_local_mapping.h  camera.h  common_include.h  config.h  dataset.h  feature.h  feature_manager.h  frame.h  front_end_map_initialization.h  front_end_tracking.h  g2o_optimizer.h  geometry_solver.h  initialization.h  keyframe_database.h  local_mapping.h  map.h  map_point.h  matcher.h  slam_system.h  system.h  tracking.h  viewer.h
include/mono_slam/feature_manager/: detector.h  matcher.h  vocabulary.h
include/mono_slam/g2o_optimizer/: g2o_types.h  g2o_utils.h  types.h  utils.h
include/mono_slam/geometry_solver/: compute_reprojection_error.h  datasample.h  decompose_essential_matrix.h  disambiguate_poses.h  estimate_essential_matrix.h  fundamental_8point.h  kneip_p3p.h  kneip_p3p.hpp  linear_triangulation.h  normalize_points.h  normalized_fundamental_8point.h  point_to_epipolar_line_distance.h  points_to_epipolar_line_distance.h  vec2skew.h
include/mono_slam/utils/: math_utils.h  opencv_drawer_utils.h  pcl_viewer_utils.h
include/my_slam/: back_end_local_mapping.h  common_include.h  config.cpp  config.h  front_end_tracking.h  keyframe_database.h  optimizer.h  slam_system.h
src/: CMakeLists.txt  _test.cc  back_end_local_mapping.cc  camera.cc  config.cc  dataset.cc  feature.cc  feature_manager.cc  frame.cc  front_end_map_initialization.cc  front_end_tracking.cc  g2o_optimizer.cc  geometry_solver.cc  initialization.cc  keyframe_database.cc  local_mapping.cc  main.cc  map.cc  map_point.cc  matcher.cc  my_test.cc  slam_system.cc  system.cc  test.cc  test1.cc  tracking.cc  viewer.cc
src/feature_manager/: vocabulary.cc
src/geometry_solver/: kneip_p3p.cc
src/utils/: opencv_drawer_utils.cc  pcl_viewer_utils.cc
utils/: math_utils.h
